--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,15 @@
 Version: 0.16.2
 Date: 25. 5. 2018
   Improvements:
+    - Added mortar for mobile capsule launching
+  Tweaks:
+    - Increased capsule turret range from 30 to 32
+    - 
+
+---------------------------------------------------------------------------------------------------
+Version: 0.16.2
+Date: 25. 5. 2018
+  Improvements:
     - Added landmine damage technology
     - Added artillery damage technology
     - Added artillery shell damage technology
