--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.6
+Date: 1. 3. 2018
+  Bugfixes:
+    - Fixed bio artillery shell having having 100 ammo per item
+    - Fixed landmine stack count    
+
+---------------------------------------------------------------------------------------------------
 Version: 0.16.5
 Date: 1. 6. 2018
   Features:
