--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,9 @@ Date: 9. 6. 2018
     - Added Oil burner for generating electricity from oils
     - All Equipment grids share equipment, mobility based equipment is disabled when appropriate
     - Added Belt Immunity Equipment
+    - Added Power Armor Mk 3
+    - Added Reinforced concrete walls and gates
+    - Added tier 3 generator, battery, shield
   Tweaks:
     - Increased Gun Turrets 2 from 75 science to 250 science
     - Added (Fuel value, emission multipler) to: Light oil (0.75MJ, 2), Crude Oil (1.15MJ, 4), Heavy Oil (0.5MJ, 3), Petroleum-gas (1.75MJ, 1.5), Napalm (1.25MJ, 4.5)
@@ -19,6 +22,14 @@ Date: 9. 6. 2018
     - Added 16x16 equipment grid to artillery-wagon
     - Increased nuclear fuel stack size from 1 to 10
     - Changed ammo category of personal laser and discharge defense so they get laser damage and speed bonuses
+    - Added electric, posion, laser resistance on modular armor, power armor, and power armor mk2
+    - Increased power armor mk2 acid resistance (decrease, percent) from (10, 40) to (15, 50)
+    - Added posion and electric resistance to wall, gate, mending wall, and mending gate
+    - Changed battery to accumulator and advanced circuit to processing unit in advanced laser recipe
+    - Changed mending gate recipe to mending wall and advanced circuits from gate and repair-capsule
+    - Decreased wall and gate laser resistance from 70 percent to 30
+    - Fixed mending wall and gate build order in GUI
+    
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.6
