--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.8
+Date: 17. 6. 2018
+  Bugfixes:
+    - Fixed Battery equipment 2 to 3 for technology naming
+
+---------------------------------------------------------------------------------------------------
 Version: 0.16.7
 Date: 9. 6. 2018
   Features:
