fixed oil generator input output values

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.9
+Date: 4. 11. 2018
+  Bugfixes:
+    - Fixed oil generator input-output value on opposite end of entity
+
+---------------------------------------------------------------------------------------------------
 Version: 0.16.8
 Date: 17. 6. 2018
   Bugfixes:
