fixed version and changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.13
+Date: 2. 13. 2019
+  Improvements:
+    - Removed capsule launcher landmine ammo from creating ghosts
+
+---------------------------------------------------------------------------------------------------
 Version: 0.16.12
 Date: 2. 8. 2019
   Improvements:
