hide ghostless landminds from gui

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.14
+Date: 2. 13. 2019
+  Improvements:
+    - Hide ghostless landmines in bonus gui screen
+
+---------------------------------------------------------------------------------------------------
 Version: 0.16.13
 Date: 2. 13. 2019
   Improvements:
