--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.1
+Date: 2. 28. 2019
+  Bugfixes:
+    - Fixed asset typo
+
+---------------------------------------------------------------------------------------------------
 Version: 0.17.0
 Date: 2. 27. 2019
   Tweaks:
