--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.16
+Date: 3. 2. 2019
+  Bugfixes:
+    - Added missing locale for rifle turret damage
+
+---------------------------------------------------------------------------------------------------
 Version: 0.16.15
 Date: 2. 18. 2019
   Bugfixes:
