--- a/changelog.txt
+++ b/changelog.txt
@@ -23,6 +23,12 @@ Date: 2. 27. 2019
     - Added thumbnail
 
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.16
+Date: 3. 2. 2019
+  Bugfixes:
+    - Fixed rifle turret damage locale
+
+---------------------------------------------------------------------------------------------------
 Version: 0.16.15
 Date: 2. 18. 2019
   Bugfixes:
