--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.2
+Date: 3. 09. 2019
+  Tweaks:
+    - Increased advanced laser damage by 900
+    - Increased advanced laser range from 40 to 42
+    - Increased advanced laser min range from 7 to 13
+    - Increased advanced laser projectile creation distance from 10 to 13
+
+---------------------------------------------------------------------------------------------------
 Version: 0.17.1
 Date: 2. 28. 2019
   Bugfixes:
