--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.4
+Date: 3. 14. 2019
+  Bugfixes:
+    - Fixed emissions to emissions_per_second_per_watt upcoming factorio change
+
+---------------------------------------------------------------------------------------------------
 Version: 0.17.3
 Date: 3. 12. 2019
   Tweaks:
