--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.5
+Date: 3. 22. 2019
+  Tweaks:
+    - Softened colors for landmines, train, cars, tanks
+
+---------------------------------------------------------------------------------------------------
 Version: 0.17.4
 Date: 3. 14. 2019
   Bugfixes:
