--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.7
+Date: 4. 08. 2019
+  Improvements:
+    - Added support for the nuclear generator equipment in the mods Power Armor MK3 & 4 by request
+  Bugfixes:
+    - Fixed naming convention with recipes
+    - Fixed ghostless landmines not being hidden
+
+---------------------------------------------------------------------------------------------------
 Version: 0.17.6
 Date: 4. 06. 2019
   Tweaks:
