--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,18 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.8
+Date: 4. 11. 2019
+  Tweaks:
+    - Changed Oil Burner efficiency to 100%
+    - Increased Oil Burner power output to 7.5MW
+    - Reduced napalm fuel value to 0.85MJ
+    - Reduced emissions of naplam to 2.5
+    - Increased light oil fuel value to 0.95MJ
+    - Reduced emissions of light oil to 1.5
+    - Reduced crude oil fuel value to 0.45MJ
+    - Increased heavy oil fuel value to 0.57MJ
+    - Reduced petroleum oil fuel value to 1.1MJ
+
+---------------------------------------------------------------------------------------------------
 Version: 0.17.7
 Date: 4. 08. 2019
   Improvements:
