--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.9
+Date: 4. 14. 2019
+  Bugfixes:
+    - Fixed recipe migration
+    
+---------------------------------------------------------------------------------------------------
 Version: 0.17.8
 Date: 4. 11. 2019
   Tweaks:
