missing changelog item

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 0.17.15
 Date: 5. 3. 2019
   Tweaks:
     - Added projectile lead targeting to shotgun, capsule launcher, cannon, rapid cannon, and advanced flamethrower turrets
+    - Increased rocket turret cooldown to 300
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.17.14
